# Intelligent-Indoor-Cultivation-System

Code_Instructions/: Description.docx  Instruction.docx
Code_Instructions/code/src/dm_reader/: CMakeLists.txt  package.xml
Code_Instructions/code/src/dm_reader/launch/: camera.launch
Code_Instructions/code/src/dm_reader/src/: crc16.cpp  dualmotor.h  ht_vision.cpp  ht_vision.h  modbus.h  singlemotor.cpp  singlemotor.h  tag_correction.cpp  tag_correction.h  tag_correction_node.cpp
Code_Instructions/code/src/tag_detector/apriltags/: CMakeLists.txt
Code_Instructions/code/src/tag_detector/apriltags/include/AprilTags/: TagDetector.h
Code_Instructions/code/src/tag_detector/apriltags/src/: TagDetector.cc
Code_Instructions/code/src/tag_detector/apriltags_ros/: CMakeLists.txt
Code_Instructions/code/src/tag_detector/apriltags_ros/include/apriltags_ros/: apriltag_detector.h
Code_Instructions/code/src/tag_detector/apriltags_ros/launch/: example.launch
Code_Instructions/code/src/tag_detector/apriltags_ros/src/: apriltag_detector.cpp
Code_Instructions/motor_control/: CMakeLists.txt  package.xml
Code_Instructions/motor_control/src/: crc16.h  dualmotor.cpp  modbus.cpp  motor_control.cpp  motor_control.h  motor_control_node.cpp  singlemotor.cpp  singlemotor.h
Hardware/Safety/: Agricultural robot user manual.docx  Instrctions.docx  电气操作说明.txt
Hardware/Wirelss charger/: Wireless charger.docx
Maintenance_liaison/: Shenzhen.docx
Others/DMCode_Generator/: CMakeLists.txt  README.md
Others/DMCode_Generator/include/DataMatrix/: DrawCode2D.h  DrawCode2D.h~  ReedSolomon.h  ReedSolomonDecoder.h  ReedSolomonEncoder.h  dataMatrix.h  dataMatrix.h~  dataMatrixDecoder.h  dataMatrixEncoder.h
Others/DMCode_Generator/src/: CodeGenerator.cpp  CodeGenerator.cpp~  DrawCode2D.cpp  DrawCode2D.cpp~  DrawCode2D.h~  ReedSolomon.h~  ReedSolomonDecoder.cpp  ReedSolomonDecoder.cpp~  ReedSolomonDecoder.h~  ReedSolomonEncoder.cpp  ReedSolomonEncoder.cpp~  ReedSolomonEncoder.h~  dataMatrix.h~  dataMatrixDecoder.cpp  dataMatrixDecoder.cpp~  dataMatrixDecoder.h~  dataMatrixEncoder.cpp  dataMatrixEncoder.cpp~  dataMatrixEncoder.h~  galois.cpp~  galois.h~  reedsolomon.cpp  test.cpp~
Software_Instructions/: Instructions.docx
Software_Instructions/Motor/: yz-acsd608_5_2.rar
